# glyphs-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  glyphs_mcp_server.py  pyproject.toml
.github/: FUNDING.yml
plugin/GlyphsMCP.glyphsPlugin/Contents/: Info.plist
plugin/GlyphsMCP.glyphsPlugin/Contents/Resources/: bridge.py  handlers.py  plugin.py  server.py
