[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glyphs-mcp"
version = "0.1.1"
description = "MCP bridge for AI-assisted type design in GlyphsApp"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nicolas Massi" }
]
keywords = ["mcp", "glyphs", "type-design", "font", "ai", "glyphsapp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Artistic Software",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/nmassi/glyphs-mcp"
Issues = "https://github.com/nmassi/glyphs-mcp/issues"

[project.scripts]
glyphs-mcp = "glyphs_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["glyphs_mcp_server.py"]
